eks-cluster-deploy.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'EKS cluster (dedicated VPC: true, dedicated IAM: true)'
Mappings:
    ServicePrincipalPartitionMap:
        aws:
            EC2: ec2.amazonaws.com
            EKS: eks.amazonaws.com
            EKSFargatePods: eks-fargate-pods.amazonaws.com
        aws-cn:
            EC2: ec2.amazonaws.com.cn
            EKS: eks.amazonaws.com
            EKSFargatePods: eks-fargate-pods.amazonaws.com
        aws-us-gov:
            EC2: ec2.amazonaws.com
            EKS: eks.amazonaws.com
            EKSFargatePods: eks-fargate-pods.amazonaws.com
Resources:
    ClusterSharedNodeSecurityGroup:
        Type: 'AWS::EC2::SecurityGroup'
        Properties:
            GroupDescription: Communication between all nodes in the cluster
            Tags:
                - 
                    Key: Name
                    Value: 
                        'Fn::Sub': '${AWS::StackName}/ClusterSharedNodeSecurityGroup'
            VpcId: !Ref VPC
    ControlPlane:
        Type: 'AWS::EKS::Cluster'
        Properties:
            KubernetesNetworkConfig:
                IpFamily: ipv4
            Name: eks-test
            ResourcesVpcConfig:
                EndpointPrivateAccess: false
                EndpointPublicAccess: true
                SecurityGroupIds:
                    - !Ref ControlPlaneSecurityGroup
                SubnetIds:
                    - !Ref SubnetPublicAPSOUTH1A
                    - !Ref SubnetPublicAPSOUTH1B
                    - !Ref SubnetPrivateAPSOUTH1A
                    - !Ref SubnetPrivateAPSOUTH1B
            RoleArn:
                    "Fn::GetAtt":
                        - ServiceRole
                        - Arn
            Tags:
                - Key: Name
                  Value: 
                    "Fn::Sub": "${AWS::StackName}/ControlPlane"
                    
            Version: '1.22'
    ControlPlaneSecurityGroup:
        Type: 'AWS::EC2::SecurityGroup'
        Properties:
            GroupDescription: Communication between the control plane and worker nodegroups
            Tags:
                - 
                    Key: Name
                    Value:
                        "Fn::Sub": "${AWS::StackName}/ControlPlaneSecurityGroup"
            VpcId:
                !Ref VPC
    IngressDefaultClusterToNodeSG:
        Type: 'AWS::EC2::SecurityGroupIngress'
        Properties:
            Description: Allow managed and unmanaged nodes to communicate with each other (all ports)
            FromPort: 0
            GroupId:
                !Ref ClusterSharedNodeSecurityGroup
            IpProtocol: '-1'
            SourceSecurityGroupId:
                "Fn::GetAtt":
                    - ControlPlane
                    - ClusterSecurityGroupId
            ToPort: 65535
    IngressInterNodeGroupSG:
        Type: 'AWS::EC2::SecurityGroupIngress'
        Properties:
            Description: Allow nodes to communicate with each other (all ports)
            FromPort: 0
            GroupId:
                !Ref ClusterSharedNodeSecurityGroup
            IpProtocol: '-1'
            SourceSecurityGroupId:
                !Ref ClusterSharedNodeSecurityGroup
            ToPort: 65535
    IngressNodeToDefaultClusterSG:
        Type: 'AWS::EC2::SecurityGroupIngress'
        Properties:
            Description: Allow unmanaged nodes to communicate with control plane (all ports)
            FromPort: 0
            GroupId:
                'Fn::GetAtt':
                    - ControlPlane
                    - ClusterSecurityGroupId
            IpProtocol: '-1'
            SourceSecurityGroupId:
                !Ref ClusterSharedNodeSecurityGroup
            ToPort: 65535
    InternetGateway:
        Type: 'AWS::EC2::InternetGateway'
        Properties:
            Tags:
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/InternetGateway'
    NATGateway:
        Type: 'AWS::EC2::NatGateway'
        Properties:
            AllocationId:
                'Fn::GetAtt':
                    - NATIP
                    - AllocationId
            SubnetId:
                !Ref SubnetPublicAPSOUTH1A
            Tags:
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/NATGateway'
    NATIP:
        Type: 'AWS::EC2::EIP'
        Properties:
            Domain: vpc
            Tags:
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/NATIP'
    NATPrivateSubnetRouteAPSOUTH1A:
        Type: 'AWS::EC2::Route'
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId:
                !Ref NATGateway
            RouteTableId:
                !Ref PrivateRouteTableAPSOUTH1A
    NATPrivateSubnetRouteAPSOUTH1B:
        Type: 'AWS::EC2::Route'
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId:
                !Ref NATGateway
            RouteTableId:
                !Ref PrivateRouteTableAPSOUTH1B
    PolicyCloudWatchMetrics:
        Type: 'AWS::IAM::Policy'
        Properties:
            PolicyDocument:
                Statement:
                    - 
                        Action:
                            - 'cloudwatch:PutMetricData'
                        Effect: Allow
                        Resource: '*'
                Version: '2012-10-17'
            PolicyName:
                'Fn::Sub': '${AWS::StackName}-PolicyCloudWatchMetrics'
            Roles:
                - 
                    !Ref ServiceRole
    PolicyELBPermissions:
        Type: 'AWS::IAM::Policy'
        Properties:
            PolicyDocument:
                Statement:
                    - 
                        Action:
                            - 'ec2:DescribeAccountAttributes'
                            - 'ec2:DescribeAddresses'
                            - 'ec2:DescribeInternetGateways'
                        Effect: Allow
                        Resource: '*'
                Version: '2012-10-17'
            PolicyName:
                'Fn::Sub': '${AWS::StackName}-PolicyELBPermissions'
            Roles:
                - 
                    !Ref ServiceRole
    PrivateRouteTableAPSOUTH1A:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            Tags:
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/PrivateRouteTableAPSOUTH1A'
            VpcId:
                !Ref VPC
    PrivateRouteTableAPSOUTH1B:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            Tags:
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/PrivateRouteTableAPSOUTH1B'
            VpcId:
                !Ref VPC
    PublicRouteTable:
        Type: 'AWS::EC2::RouteTable'
        Properties:
            Tags:
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/PublicRouteTable'
            VpcId:
                !Ref VPC
    PublicSubnetRoute:
        Type: 'AWS::EC2::Route'
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId:
                !Ref InternetGateway
            RouteTableId:
                !Ref PublicRouteTable
        DependsOn:
            - VPCGatewayAttachment
    RouteTableAssociationPrivateAPSOUTH1A:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            RouteTableId:
                !Ref PrivateRouteTableAPSOUTH1A
            SubnetId:
                !Ref SubnetPrivateAPSOUTH1A
    RouteTableAssociationPrivateAPSOUTH1B:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            RouteTableId:
                !Ref PrivateRouteTableAPSOUTH1B
            SubnetId:
                !Ref SubnetPrivateAPSOUTH1B
    RouteTableAssociationPublicAPSOUTH1A:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            RouteTableId:
                !Ref PublicRouteTable
            SubnetId:
                !Ref SubnetPublicAPSOUTH1A
    RouteTableAssociationPublicAPSOUTH1B:
        Type: 'AWS::EC2::SubnetRouteTableAssociation'
        Properties:
            RouteTableId:
                !Ref PublicRouteTable
            SubnetId:
                !Ref SubnetPublicAPSOUTH1B
    ServiceRole:
        Type: 'AWS::IAM::Role'
        Properties:
            AssumeRolePolicyDocument:
                Statement:
                    - 
                        Action:
                            - 'sts:AssumeRole'
                        Effect: Allow
                        Principal:
                            Service:
                                - 
                                    'Fn::FindInMap':
                                        - ServicePrincipalPartitionMap
                                        - 
                                            !Ref 'AWS::Partition'
                                        - EKS
                Version: '2012-10-17'
            ManagedPolicyArns:
                - 
                    'Fn::Sub': 'arn:${AWS::Partition}:iam::aws:policy/AmazonEKSClusterPolicy'
                - 
                    'Fn::Sub': 'arn:${AWS::Partition}:iam::aws:policy/AmazonEKSVPCResourceController'
            Tags:
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/ServiceRole'
    SubnetPrivateAPSOUTH1A:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone: ap-south-1a
            CidrBlock: 10.0.0.0/18
            Tags:
                - 
                    Key: kubernetes.io/role/internal-elb
                    Value: '1'
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/SubnetPrivateAPSOUTH1A'
            VpcId:
                !Ref VPC
    SubnetPrivateAPSOUTH1B:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone: ap-south-1b
            CidrBlock: 10.0.128.0/18
            Tags:
                - 
                    Key: kubernetes.io/role/internal-elb
                    Value: '1'
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/SubnetPrivateAPSOUTH1B'
            VpcId:
                !Ref VPC
    SubnetPublicAPSOUTH1A:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone: ap-south-1a
            CidrBlock: 10.0.192.0/18
            MapPublicIpOnLaunch: true
            Tags:
                - 
                    Key: kubernetes.io/role/elb
                    Value: '1'
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/SubnetPublicAPSOUTH1A'
            VpcId:
                !Ref VPC
    SubnetPublicAPSOUTH1B:
        Type: 'AWS::EC2::Subnet'
        Properties:
            AvailabilityZone: ap-south-1b
            CidrBlock: 10.0.64.0/18
            MapPublicIpOnLaunch: true
            Tags:
                - 
                    Key: kubernetes.io/role/elb
                    Value: '1'
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/SubnetPublicAPSOUTH1B'
            VpcId:
                !Ref VPC
    VPC:
        Type: 'AWS::EC2::VPC'
        Properties:
            CidrBlock: 10.0.0.0/16
            EnableDnsHostnames: true
            EnableDnsSupport: true
            Tags:
                - 
                    Key: Name
                    Value:
                        'Fn::Sub': '${AWS::StackName}/VPC'
    VPCGatewayAttachment:
        Type: 'AWS::EC2::VPCGatewayAttachment'
        Properties:
            InternetGatewayId:
                !Ref InternetGateway
            VpcId:
                !Ref VPC
Outputs:
    ARN:
        Value:
            'Fn::GetAtt':
                - ControlPlane
                - Arn
        Export:
            Name:
                'Fn::Sub': '${AWS::StackName}::ARN'
    CertificateAuthorityData:
        Value:
            'Fn::GetAtt':
                - ControlPlane
                - CertificateAuthorityData
    ClusterSecurityGroupId:
        Value:
            'Fn::GetAtt':
                - ControlPlane
                - ClusterSecurityGroupId
        Export:
            Name:
                'Fn::Sub': '${AWS::StackName}::ClusterSecurityGroupId'
    ClusterStackName:
        Value:
            !Ref 'AWS::StackName'
    Endpoint:
        Value:
            'Fn::GetAtt':
                - ControlPlane
                - Endpoint
        Export:
            Name:
                'Fn::Sub': '${AWS::StackName}::Endpoint'
    FeatureNATMode:
        Value: Single
    SecurityGroup:
        Value:
            !Ref ControlPlaneSecurityGroup
        Export:
            Name:
                'Fn::Sub': '${AWS::StackName}::SecurityGroup'
    ServiceRoleARN:
        Value:
            'Fn::GetAtt':
                - ServiceRole
                - Arn
        Export:
            Name:
                'Fn::Sub': '${AWS::StackName}::ServiceRoleARN'
    SharedNodeSecurityGroup:
        Value:
            !Ref ClusterSharedNodeSecurityGroup
        Export:
            Name:
                'Fn::Sub': '${AWS::StackName}::SharedNodeSecurityGroup'
    SubnetsPrivate:
        Value:
            'Fn::Join':
                - ','
                - 
                    - 
                        !Ref SubnetPrivateAPSOUTH1A
                    - 
                        !Ref SubnetPrivateAPSOUTH1B
        Export:
            Name:
                'Fn::Sub': '${AWS::StackName}::SubnetsPrivate'
    SubnetsPublic:
        Value:
            'Fn::Join':
                - ','
                - 
                    - 
                        !Ref SubnetPublicAPSOUTH1A
                    - 
                        !Ref SubnetPublicAPSOUTH1B
        Export:
            Name:
                'Fn::Sub': '${AWS::StackName}::SubnetsPublic'
    VPC:
        Value:
            !Ref VPC
        Export:
            Name:
                'Fn::Sub': '${AWS::StackName}::VPC'
